[package]
name = "redmine_remote"
version = "0.0.1"
authors = ["Florian Sommer <fsommer1986@gmail.com>"]

[[bin]]
name = "rr"
path = "src/main.rs"

[dependencies]
clap = "2"
csv = "1.0.0-beta"
config = "0.7"
error-chain = "0.11"
serde = "1.0"
serde_derive = "1.0"
structopt = "0.1.0"
structopt-derive = "0.1.0"

[dependencies.redmine_api]
path = "../redmine_api"
